Moved dp_clusterer from SurVIndel2 to SurVeyor.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,6 @@ include_directories(htslib-1.18)
 include_directories(htslib-1.18/include)
 
 add_executable(survindel2_add_sr_filtering_info libs/ssw.c libs/ssw_cpp.cpp SurVIndel2/add_sr_filtering_info.cpp)
-add_executable(survindel2_dp_clusterer libs/ssw.c libs/ssw_cpp.cpp libs/kdtree.c SurVIndel2/dp_clusterer.cpp)
 add_executable(survindel2_normalise SurVIndel2/normalise.cpp)
 
 add_executable(insurveyor_dc_remapper libs/ssw.c libs/ssw_cpp.cpp INSurVeyor/dc_remapper.cpp)
@@ -26,12 +25,13 @@ add_executable(reads_categorizer src/reads_categorizer.cpp)
 add_executable(clip_consensus_builder libs/ssw.c libs/ssw_cpp.cpp src/clip_consensus_builder.cpp)
 add_executable(find_svs_from_sr_consensuses libs/ssw.c libs/ssw_cpp.cpp src/find_svs_from_sr_consensuses.cpp)
 add_executable(merge_identical_calls src/merge_identical_calls.cpp)
+add_executable(dp_clusterer libs/ssw.c libs/ssw_cpp.cpp libs/kdtree.c src/dp_clusterer.cpp)
 
 add_executable(compare libs/ssw.c libs/ssw_cpp.cpp utils/compare.cpp)
 
 find_library(HTS_LIB hts PATHS htslib-1.18/lib NO_DEFAULT_PATH)
 target_link_libraries(survindel2_add_sr_filtering_info "${HTS_LIB}")
-target_link_libraries(survindel2_dp_clusterer "${HTS_LIB}")
+target_link_libraries(dp_clusterer "${HTS_LIB}")
 target_link_libraries(survindel2_normalise "${HTS_LIB}")
 
 target_link_libraries(insurveyor_dc_remapper "${HTS_LIB}")
