--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 include_directories(htslib-1.18)
 include_directories(htslib-1.18/include)
 
-add_executable(survindel2_add_sr_filtering_info libs/ssw.c libs/ssw_cpp.cpp SurVIndel2/add_sr_filtering_info.cpp)
 add_executable(survindel2_normalise SurVIndel2/normalise.cpp)
 
 add_executable(insurveyor_dc_remapper libs/ssw.c libs/ssw_cpp.cpp INSurVeyor/dc_remapper.cpp)
@@ -26,12 +25,11 @@ add_executable(clip_consensus_builder libs/ssw.c libs/ssw_cpp.cpp src/clip_conse
 add_executable(find_svs_from_sr_consensuses libs/ssw.c libs/ssw_cpp.cpp src/find_svs_from_sr_consensuses.cpp)
 add_executable(merge_identical_calls src/merge_identical_calls.cpp)
 add_executable(dp_clusterer libs/ssw.c libs/ssw_cpp.cpp libs/kdtree.c src/dp_clusterer.cpp)
+add_executable(add_filtering_info src/add_filtering_info.cpp)
 
 add_executable(compare libs/ssw.c libs/ssw_cpp.cpp utils/compare.cpp)
 
 find_library(HTS_LIB hts PATHS htslib-1.18/lib NO_DEFAULT_PATH)
-target_link_libraries(survindel2_add_sr_filtering_info "${HTS_LIB}")
-target_link_libraries(dp_clusterer "${HTS_LIB}")
 target_link_libraries(survindel2_normalise "${HTS_LIB}")
 
 target_link_libraries(insurveyor_dc_remapper "${HTS_LIB}")
@@ -42,5 +40,7 @@ target_link_libraries(reads_categorizer "${HTS_LIB}")
 target_link_libraries(clip_consensus_builder "${HTS_LIB}")
 target_link_libraries(find_svs_from_sr_consensuses "${HTS_LIB}")
 target_link_libraries(merge_identical_calls "${HTS_LIB}")
+target_link_libraries(dp_clusterer "${HTS_LIB}")
+target_link_libraries(add_filtering_info "${HTS_LIB}")
 
 target_link_libraries(compare "${HTS_LIB}")
