--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,30 +18,24 @@ include_directories(htslib-1.18/include)
 
 add_executable(normalise utils/normalise.cpp)
 
-add_executable(insurveyor_dc_remapper libs/ssw.c libs/ssw_cpp.cpp INSurVeyor/dc_remapper.cpp)
-add_executable(insurveyor_add_filtering_info libs/ssw.c libs/ssw_cpp.cpp INSurVeyor/add_filtering_info.cpp)
-add_executable(insurveyor_filter libs/ssw.c libs/ssw_cpp.cpp INSurVeyor/filter.cpp)
-
 add_executable(reads_categorizer src/reads_categorizer.cpp)
 add_executable(clip_consensus_builder libs/ssw.c libs/ssw_cpp.cpp src/clip_consensus_builder.cpp)
 add_executable(find_svs_from_sr_consensuses libs/ssw.c libs/ssw_cpp.cpp src/find_svs_from_sr_consensuses.cpp)
 add_executable(merge_identical_calls src/merge_identical_calls.cpp)
 add_executable(dp_clusterer libs/ssw.c libs/ssw_cpp.cpp src/dp_clusterer.cpp)
+add_executable(insertions_assembler libs/ssw.c libs/ssw_cpp.cpp src/insertions_assembler.cpp)
 add_executable(add_filtering_info src/add_filtering_info.cpp)
 
 add_executable(compare libs/ssw.c libs/ssw_cpp.cpp utils/compare.cpp)
 
 find_library(HTS_LIB hts PATHS htslib-1.18/lib NO_DEFAULT_PATH)
 
-target_link_libraries(insurveyor_dc_remapper "${HTS_LIB}")
-target_link_libraries(insurveyor_add_filtering_info "${HTS_LIB}")
-target_link_libraries(insurveyor_filter "${HTS_LIB}")
-
 target_link_libraries(reads_categorizer "${HTS_LIB}")
 target_link_libraries(clip_consensus_builder "${HTS_LIB}")
 target_link_libraries(find_svs_from_sr_consensuses "${HTS_LIB}")
 target_link_libraries(merge_identical_calls "${HTS_LIB}")
 target_link_libraries(dp_clusterer "${HTS_LIB}")
+target_link_libraries(insertions_assembler "${HTS_LIB}")
 target_link_libraries(add_filtering_info "${HTS_LIB}")
 
 target_link_libraries(compare "${HTS_LIB}")
